WIP: local changes

--- a/1_foundations/4_lab4.ipynb
+++ b/1_foundations/4_lab4.ipynb
@@ -88,16 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: HEY!!\n"
+     ]
+    }
+   ],
    "source": [
     "push(\"HEY!!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +192,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': 'function',\n",
+       "  'function': {'name': 'record_user_details',\n",
+       "   'description': 'Use this tool to record that a user is interested in being in touch and provided an email address',\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'email': {'type': 'string',\n",
+       "      'description': 'The email address of this user'},\n",
+       "     'name': {'type': 'string',\n",
+       "      'description': \"The user's name, if they provided it\"},\n",
+       "     'notes': {'type': 'string',\n",
+       "      'description': \"Any additional information about the conversation that's worth recording to give context\"}},\n",
+       "    'required': ['email'],\n",
+       "    'additionalProperties': False}}},\n",
+       " {'type': 'function',\n",
+       "  'function': {'name': 'record_unknown_question',\n",
+       "   'description': \"Always use this tool to record any question that couldn't be answered as you didn't know the answer\",\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'question': {'type': 'string',\n",
+       "      'description': \"The question that couldn't be answered\"}},\n",
+       "    'required': ['question'],\n",
+       "    'additionalProperties': False}}}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,16 +257,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.record_unknown_question(question)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "globals()[\"record_unknown_question\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: Recording this is a really hard question asked that I couldn't answer\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'recorded': 'ok'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "globals()[\"record_unknown_question\"](\"this is a really hard question\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = PdfReader(\"me/linkedin.pdf\")\n",
+    "reader = PdfReader(\"me/Linkedin_Arsalan.pdf\")\n",
     "linkedin = \"\"\n",
     "for page in reader.pages:\n",
     "    text = page.extract_text()\n",
@@ -262,12 +338,12 @@
     "with open(\"me/summary.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    summary = f.read()\n",
     "\n",
-    "name = \"Ed Donner\""
+    "name = \"Arsalan Sarwar\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,11 +377,11 @@
     "        finish_reason = response.choices[0].finish_reason\n",
     "        \n",
     "        # If the LLM wants to call a tool, we do that!\n",
-    "         \n",
     "        if finish_reason==\"tool_calls\":\n",
     "            message = response.choices[0].message\n",
     "            tool_calls = message.tool_calls\n",
     "            results = handle_tool_calls(tool_calls)\n",
+    "            print(f'finish_reason: {finish_reason}, message: {message}, tool_calls: {tool_calls}, results: {results}')\n",
     "            messages.append(message)\n",
     "            messages.extend(results)\n",
     "        else:\n",
@@ -315,9 +391,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool called: record_unknown_question\n",
+      "Push: Recording Do you have any patents? asked that I couldn't answer\n",
+      "finish_reason: tool_calls, message: ChatCompletionMessage(content=None, refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_veE3yHIqRygw97Z7Y2ok3fyL', function=Function(arguments='{\"question\":\"Do you have any patents?\"}', name='record_unknown_question'), type='function')]), tool_calls: [ChatCompletionMessageToolCall(id='call_veE3yHIqRygw97Z7Y2ok3fyL', function=Function(arguments='{\"question\":\"Do you have any patents?\"}', name='record_unknown_question'), type='function')], results: [{'role': 'tool', 'content': '{\"recorded\": \"ok\"}', 'tool_call_id': 'call_veE3yHIqRygw97Z7Y2ok3fyL'}]\n",
+      "Tool called: record_unknown_question\n",
+      "Push: Recording how many tools do you have? asked that I couldn't answer\n",
+      "finish_reason: tool_calls, message: ChatCompletionMessage(content=None, refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_6HvIWJgnyXFCrGtJTCiDUDzT', function=Function(arguments='{\"question\":\"how many tools do you have?\"}', name='record_unknown_question'), type='function')]), tool_calls: [ChatCompletionMessageToolCall(id='call_6HvIWJgnyXFCrGtJTCiDUDzT', function=Function(arguments='{\"question\":\"how many tools do you have?\"}', name='record_unknown_question'), type='function')], results: [{'role': 'tool', 'content': '{\"recorded\": \"ok\"}', 'tool_call_id': 'call_6HvIWJgnyXFCrGtJTCiDUDzT'}]\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -437,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
